@@ -1,0 +1,30 @@
+.stats th { 
+    text-align: right; 
+    padding-right: 2px;
+    padding-left: 2px; 
+}
+
+.stats td { 
+    padding-right: 2px;
+    padding-left: 2px;
+}
+
+.stats td.left { 
+    text-align: right;
+}
+
+div.translated {
+  right: 0%; 
+}
+
+div.maintainer {
+  padding-right: 85px; 
+  background-position: top right; 
+}
+
+div.mainpage {
+  width:80%;
+  text-align: right;
+  margin-left: auto;
+  margin-right: auto;
+}
