@@ -4,6 +4,9 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head><title>$_("Damned Lies about Gnome")</title>
   <link rel="stylesheet" href="data/main.css"/>
+#if $rtl
+  <link rel="stylesheet" href="data/rtl.css"/>
+#end if
   <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 </head>
 #if $rtl
