@@ -3,6 +3,7 @@
 	* gnome-modules.xml.in : mark gnome-2-18 packages string frozen.
 	* releases.xml.in : mark gnome-2-18 string frozen.
 	* translation-teams.xml.in : Add description for Arabic team.
+	* templates/language-release.tmpl : Marked string for translation.
 
 2007-02-25  Kjartan Maraas  <kmaraas@gnome.org>
 
